Blank generator created for fastbuild

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -450,7 +450,9 @@ if (WIN32)
       cmGlobalVisualStudio14Generator.h
       cmGlobalVisualStudio14Generator.cxx
       cmGlobalVisualStudioGenerator.cxx
-      cmGlobalVisualStudioGenerator.h
+      cmGlobalFastbuildGenerator.h
+      cmGlobalFastbuildGenerator.cxx
+      cmGlobalGenerator.h
       cmIDEFlagTable.h
       cmIDEOptions.cxx
       cmIDEOptions.h
@@ -460,6 +462,8 @@ if (WIN32)
       cmLocalVisualStudio7Generator.h
       cmLocalVisualStudioGenerator.cxx
       cmLocalVisualStudioGenerator.h
+      cmLocalFastbuildGenerator.cxx
+      cmLocalFastbuildGenerator.h
       cmVisualStudioSlnData.h
       cmVisualStudioSlnData.cxx
       cmVisualStudioSlnParser.h
