--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -450,8 +450,6 @@ if (WIN32)
       cmGlobalVisualStudio14Generator.h
       cmGlobalVisualStudio14Generator.cxx
       cmGlobalVisualStudioGenerator.cxx
-      cmGlobalFastbuildGenerator.h
-      cmGlobalFastbuildGenerator.cxx
       cmGlobalGenerator.h
       cmIDEFlagTable.h
       cmIDEOptions.cxx
@@ -462,8 +460,6 @@ if (WIN32)
       cmLocalVisualStudio7Generator.h
       cmLocalVisualStudioGenerator.cxx
       cmLocalVisualStudioGenerator.h
-      cmLocalFastbuildGenerator.cxx
-      cmLocalFastbuildGenerator.h
       cmVisualStudioSlnData.h
       cmVisualStudioSlnData.cxx
       cmVisualStudioSlnParser.h
@@ -496,6 +492,14 @@ set(SRCS ${SRCS}
   cmNinjaNormalTargetGenerator.h
   cmNinjaUtilityTargetGenerator.cxx
   cmNinjaUtilityTargetGenerator.h
+  )
+
+# Fastbuild support
+set(SRCS ${SRCS}
+  cmGlobalFastbuildGenerator.h
+  cmGlobalFastbuildGenerator.cxx
+  cmLocalFastbuildGenerator.cxx
+  cmLocalFastbuildGenerator.h
   )
 if(WIN32 AND NOT CYGWIN)
   set_source_files_properties(cmcldeps.cxx PROPERTIES COMPILE_DEFINITIONS _WIN32_WINNT=0x0501)
